# onnx-safetensors

./: .gitignore  .lintrunner.toml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: codeql.yml  main.yml
docs/: api.md  conf.py  index.md
examples/: model.py  model.textproto  save_model_sharding.py  tutorial.ipynb
onnx_safetensors/: __init__.py  _external_data_helper.py  _external_tensor_helper.py  _safetensors_io.py  _safetensors_io_test.py  _utils.py  safetensors_io.py  utils.py
src/onnx_safetensors/: __init__.py  _cli.py  _safetensors_io.py  _tensors.py
test/onnx_safetensors/: _safetensors_io_test.py  api_test.py
