[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-safetensors"
dynamic = ["version"]
description = "Use safetensors with ONNX"
keywords = []
authors = [
  { name = "Justin Chu", email = "justinchuby@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy",
  "onnx>=1.14",
  "safetensors",
]

[project.urls]
Documentation = "https://github.com/justinchuby/onnx-safetensors#readme"
Issues = "https://github.com/justinchuby/onnx-safetensors/issues"
Source = "https://github.com/justinchuby/onnx-safetensors"

[tool.setuptools.dynamic]
version = {attr = "onnx_safetensors.__version__"}

[tool.setuptools.packages.find]
include = ["onnx_safetensors*"]

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"

[tool.ruff]
target-version = "py38"
select = [
    "A",
    "ARG",
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # Pyflakes
    "G", # flake8-logging-format
    "ICN",
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "NPY", # modern numpy
    "PERF", # Perflint
    "RUF", # Ruff-specific rules
    "T10", # flake8-debugger
    "TID252", # Disallow relative imports
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020
]
ignore = [
    "E501", # Line length. Not enforced because black will handle formatting
    "PLR0913", # Too many arguments
]

[tool.ruff.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.pydocstyle]
convention = "google"
